--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "version": "1.0.0",
     "description": "A site to show a hello world example of using Netlify Functions",
     "author": "Netlify",
-    "license": "ISC"
+    "license": "ISC",
+    "dependencies": {
+        "axios": "^1.2.0"
+    }
 }
