--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "author": "Netlify",
     "license": "ISC",
     "dependencies": {
-        "axios": "^1.2.0"
+        "axios": "^1.2.0",
+        "date-fns": "^2.29.3"
     }
 }
